--- a/index.html
+++ b/index.html
@@ -1,1 +1,11 @@
-Bem vindo ao maior catálogo da Internet - aluraflix 
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Aluraflix</title>
+</head>
+<body>
+    Bem vindo ao aluraflix, aqui você encontrara uma coleção de filmes interessantes de todos os gêneros
+</body>
+</html>
