--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
     <title>Aluraflix</title>
 </head>
 <body>
-    Bem vindo ao aluraflix, aqui você encontrara uma coleção de filmes interessantes de todos os gêneros
+    <H1> Bem vindo ao aluraflix, aqui você encontrara uma coleção de filmes interessantes de todos os gêneros </H1>
 </body>
 </html>
