--- a/index.html
+++ b/index.html
@@ -7,5 +7,15 @@
 </head>
 <body>
     <H1> Bem vindo ao aluraflix, aqui você encontrara uma coleção de filmes interessantes de todos os gêneros </H1>
+   
+    <p> conheça os filmes de nosso catálogo </p>
+    <ul>
+
+          <li> as branquelas </li>
+          <li> divertidamente dois </li>
+          <li> iluminados </li>
+
+    </ul>
+    
 </body>
 </html>
