--- a/index.html
+++ b/index.html
@@ -1,21 +1,23 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-BR">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Aluraflix</title>
 </head>
-<body>
-    <H1> Bem vindo ao aluraflix, aqui você encontrara uma coleção de filmes interessantes de todos os gêneros </H1>
-   
-    <p> conheça os filmes de nosso catálogo </p>
-    <ul>
+<body style="backgroud-color: blue;" > <!--cor de fundo básica -->
 
-          <li> as branquelas </li>
-          <li> divertidamente dois </li>
-          <li> iluminados </li>
-
-    </ul>
+   <!--texto de apresentação -->
+   <H1> Bem vindo ao aluraflix, aqui você encontrara uma coleção de filmes interessantes de todos os gêneros </H1>
+     <p> conheça os filmes de nosso catálogo </p>
     
-</body>
-</html>
+  <!--tabela de filmes -->
+  <table border="1" cellspacing="0" cellppading="10" >
+    <tr>
+        <th> filme</th>
+        <th>imagem</th>
+    </tr>
+    <tr>
+        <td>filme 1</td>
+        <td><img src="imgem1.jpg alt="imagem do fime 2" width="100"></td>
+    </tr>
