--- a/index.html
+++ b/index.html
@@ -19,5 +19,32 @@
     </tr>
     <tr>
         <td>filme 1</td>
-        <td><img src="imgem1.jpg alt="imagem do fime 2" width="100"></td>
+        <td><img src="imagem1.jpg alt="imagem do fime 1" width="100"></td>
     </tr>
+
+    <tr>
+        <td>filme 2</td>
+        <td>img src="imagem2.jpg alt="imagem do filme 2" width="100"></td>
+    </tr>
+
+    <tr>
+        <td>filme 3</td>
+        <td>img src="imagem3.jpg alt="imagem do filme 3" width="100"></td>
+    </tr>
+
+    <tr>
+        <td>filme 4</td>
+        <td>img src="imagem4.jpg alt="imagem do filme 4" width="100"></td>
+    </tr>
+
+    <tr>
+        <td>filme 5</td>
+        <td>img src="imagem5.jpg alt="imagem do filme 5" width="100></td>
+    </tr>
+
+    <tr>
+        <td>filme 6</td>
+        <td>img src="imagem6.jpg alt="imagem do filme 6" width="100></tr>
+    </tr>
+
+    
