--- a/index.html
+++ b/index.html
@@ -47,4 +47,60 @@
         <td>img src="imagem6.jpg alt="imagem do filme 6" width="100></tr>
     </tr>
 
-    
+    <tr>
+        <td>filme 7</td>
+        <td>img src="imagem7.jpg alt="imagem do filme 7" width="100></tr>
+    </tr>
+
+    <tr>
+        <td>filme 8</td>
+        <td>img src="imagem8.jpg alt="imagem do filme 8" width="100></tr>
+    </tr>
+
+    <tr>
+        <td>filme 9</td>
+        <td>img src="imagem9.jpg alt="imagem do filme 9" width="100></tr>
+    </tr>
+
+    <tr>
+        <td>filme 10</td>
+        <td>img src="imagem10.jpg alt="imagem do filme 10" width="100></tr>
+    </tr>
+
+    <tr>
+        <td>filme 11</td>
+        <td>img src="imagem11.jpg alt="imagem do filme 11" width="100></tr>
+    </tr>
+
+    <tr>
+        <td>filme 12</td>
+        <td>img src="imagem12.jpg alt="imagem do filme 12" width="100></tr>
+    </tr>
+
+    <tr>
+        <td>filme 13</td>
+        <td>img src="imagem13.jpg alt="imagem do filme 13" width="100></tr>
+    </tr>
+
+    <tr>
+        <td>filme 14</td>
+        <td>img src="imagem14.jpg alt="imagem do filme 14" width="100></tr>
+    </tr>
+  
+    <tr>
+        <td>filme 15</td>
+        <td>img src="imagem15.jpg alt="imagem do filme 15" width="100></tr>
+    </tr>
+
+    <tr>
+        <td>filme 16</td>
+        <td>img src="imagem16.jpg alt="imagem do filme 16" width="100></tr>
+    </tr>
+
+    <!--rodapé-->
+    <footer style="margin-top: 20px;">
+        <p>aluraflix 2024-todos os direitos reservados.</p>
+    </footer>
+
+    </body>
+    </html>
