--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <th>imagem</th>
     </tr>
     <tr>
-        <td>filme 1</td>
+        <td>gato de botas 2</td>
         <td><img src="imagem1.jpg alt="imagem do fime 1" width="100"></td>
     </tr>
 
