--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
         <th>imagem</th>
     </tr>
     <tr>
-        <td>gato de botas 2</td>
-        <td><img src="imagem1.jpg alt="imagem do fime 1" width="100"></td>
+        <td>gato de botas</td>
+        <td><img src="gato de botas"alt=imagem do fime 1" width="100"></td>
     </tr>
 
     <tr>
