--- a/index.html
+++ b/index.html
@@ -19,12 +19,12 @@
     </tr>
     <tr>
         <td>gato de botas</td>
-        <td><img src="gato de botas"alt=imagem do fime 1" width="100"></td>
+        <td><img src="gato de botas" alt="imagem do fime 1" width="100"></td>
     </tr>
 
     <tr>
-        <td>filme 2</td>
-        <td>img src="imagem2.jpg alt="imagem do filme 2" width="100"></td>
+        <td>resident evil ilha da morte</td>
+        <td>img src="resident evil ilha da morte" alt="imagem do filme 2" width="100"></td>
     </tr>
 
     <tr>
